ansible deprecated 'yes/no' to true/false

--- a/tasks/setup.yml
+++ b/tasks/setup.yml
@@ -48,9 +48,9 @@
   community.docker.docker_network:
     name: "{{ docker_network_dependencytrack_name }}"
     driver: "{{ docker_network_dependencytrack_driver | default('bridge') }}"
-    attachable: "{{ docker_network_dependencytrack_attachable | default('yes') }}"
-    enable_ipv6: "{{ docker_network_dependencytrack_enable_ipv6 | default('no') }}"
-    internal: "{{ docker_network_dependencytrack_internal | default('no') }}"
+    attachable: "{{ docker_network_dependencytrack_attachable | default(true) }}"
+    enable_ipv6: "{{ docker_network_dependencytrack_enable_ipv6 | default(false) }}"
+    internal: "{{ docker_network_dependencytrack_internal | default(false) }}"
     state: present
 
 - name: docker_container {{ docker_container_dependencytrack_db_name }}
@@ -59,27 +59,27 @@
     comparisons: "{{ docker_container_dependencytrack_db_comparisons }}"
     image: "{{ docker_container_dependencytrack_db_image }}"
     state: "{{ docker_container_dependencytrack_db_state | default('started') }}"
-    recreate: "{{ docker_container_dependencytrack_db_recreate | default('no') }}"
-    restart: "{{ docker_container_dependencytrack_db_restart | default('no') }}"
+    recreate: "{{ docker_container_dependencytrack_db_recreate | default(false) }}"
+    restart: "{{ docker_container_dependencytrack_db_restart | default(false) }}"
     restart_policy: "{{ docker_container_dependencytrack_db_restart_policy | default('always') }}"
     container_default_behavior: no_defaults
-    auto_remove: "{{ docker_container_dependencytrack_db_auto_remove | default('no') }}"
-    detach: "{{ docker_container_dependencytrack_db_detach | default('yes') }}"
-    init: "{{ docker_container_dependencytrack_db_init | default('no') }}"
-    interactive: "{{ docker_container_dependencytrack_db_interactive | default('no') }}"
-    keep_volumes: "{{ docker_container_dependencytrack_db_keep_volumes | default('yes') }}"
+    auto_remove: "{{ docker_container_dependencytrack_db_auto_remove | default(false) }}"
+    detach: "{{ docker_container_dependencytrack_db_detach | default(true) }}"
+    init: "{{ docker_container_dependencytrack_db_init | default(false) }}"
+    interactive: "{{ docker_container_dependencytrack_db_interactive | default(false) }}"
+    keep_volumes: "{{ docker_container_dependencytrack_db_keep_volumes | default(true) }}"
     memory: "{{ docker_container_dependencytrack_db_memory | default('0') }}"
-    paused: "{{ docker_container_dependencytrack_db_paused | default('no') }}"
-    privileged: "{{ docker_container_dependencytrack_db_privileged | default('no') }}"
-    read_only: "{{ docker_container_dependencytrack_db_read_only | default('no') }}"
-    tty: "{{ docker_container_dependencytrack_db_tty | default('no') }}"
+    paused: "{{ docker_container_dependencytrack_db_paused | default(false) }}"
+    privileged: "{{ docker_container_dependencytrack_db_privileged | default(false) }}"
+    read_only: "{{ docker_container_dependencytrack_db_read_only | default(false) }}"
+    tty: "{{ docker_container_dependencytrack_db_tty | default(false) }}"
     env_file: "{{ docker_container_dependencytrack_db_env_file | default(omit) }}"
     env: "{{ docker_container_dependencytrack_db_env | default(omit) }}"
     volumes: "{{ docker_container_dependencytrack_db_volumes | default(omit) }}"
     labels: "{{ docker_container_dependencytrack_db_labels | default(omit) }}"
-    networks_cli_compatible: "{{ docker_container_dependencytrack_db_networks_cli_compatible | default('yes') }}"
+    networks_cli_compatible: "{{ docker_container_dependencytrack_db_networks_cli_compatible | default(true) }}"
     network_mode: "{{ docker_network_dependencytrack_db_name }}"
-    pull: "{{ docker_container_dependencytrack_db_pull | default('no') }}"
+    pull: "{{ docker_container_dependencytrack_db_pull | default(false) }}"
     networks: "{{ docker_container_dependencytrack_db_networks }}"
     published_ports: "{{ docker_container_dependencytrack_db_ports | default(omit) }}"
 
@@ -89,27 +89,27 @@
     comparisons: "{{ docker_container_dependencytrack_apiserver_comparisons }}"
     image: "{{ docker_container_dependencytrack_apiserver_image }}"
     state: "{{ docker_container_dependencytrack_apiserver_state | default('started') }}"
-    recreate: "{{ docker_container_dependencytrack_apiserver_recreate | default('no') }}"
-    restart: "{{ docker_container_dependencytrack_apiserver_restart | default('no') }}"
+    recreate: "{{ docker_container_dependencytrack_apiserver_recreate | default(false) }}"
+    restart: "{{ docker_container_dependencytrack_apiserver_restart | default(false) }}"
     restart_policy: "{{ docker_container_dependencytrack_apiserver_restart_policy | default('always') }}"
     container_default_behavior: no_defaults
-    auto_remove: "{{ docker_container_dependencytrack_apiserver_auto_remove | default('no') }}"
-    detach: "{{ docker_container_dependencytrack_apiserver_detach | default('yes') }}"
-    init: "{{ docker_container_dependencytrack_apiserver_init | default('no') }}"
-    interactive: "{{ docker_container_dependencytrack_apiserver_interactive | default('no') }}"
-    keep_volumes: "{{ docker_container_dependencytrack_apiserver_keep_volumes | default('yes') }}"
+    auto_remove: "{{ docker_container_dependencytrack_apiserver_auto_remove | default(false) }}"
+    detach: "{{ docker_container_dependencytrack_apiserver_detach | default(true) }}"
+    init: "{{ docker_container_dependencytrack_apiserver_init | default(false) }}"
+    interactive: "{{ docker_container_dependencytrack_apiserver_interactive | default(false) }}"
+    keep_volumes: "{{ docker_container_dependencytrack_apiserver_keep_volumes | default(true) }}"
     memory: "{{ docker_container_dependencytrack_apiserver_memory | default('0') }}"
-    paused: "{{ docker_container_dependencytrack_apiserver_paused | default('no') }}"
-    privileged: "{{ docker_container_dependencytrack_apiserver_privileged | default('no') }}"
-    read_only: "{{ docker_container_dependencytrack_apiserver_read_only | default('no') }}"
-    tty: "{{ docker_container_dependencytrack_apiserver_tty | default('no') }}"
+    paused: "{{ docker_container_dependencytrack_apiserver_paused | default(false) }}"
+    privileged: "{{ docker_container_dependencytrack_apiserver_privileged | default(false) }}"
+    read_only: "{{ docker_container_dependencytrack_apiserver_read_only | default(false) }}"
+    tty: "{{ docker_container_dependencytrack_apiserver_tty | default(false) }}"
     env_file: "{{ docker_container_dependencytrack_apiserver_env_file | default(omit) }}"
     env: "{{ docker_container_dependencytrack_apiserver_env | default(omit) }}"
     volumes: "{{ docker_container_dependencytrack_apiserver_volumes | default(omit) }}"
     labels: "{{ docker_container_dependencytrack_apiserver_labels | default(omit) }}"
-    networks_cli_compatible: "{{ docker_container_dependencytrack_apiserver_networks_cli_compatible | default('yes') }}"
+    networks_cli_compatible: "{{ docker_container_dependencytrack_apiserver_networks_cli_compatible | default(true) }}"
     network_mode: "{{ docker_network_dependencytrack_apiserver_name }}"
-    pull: "{{ docker_container_dependencytrack_apiserver_pull | default('no') }}"
+    pull: "{{ docker_container_dependencytrack_apiserver_pull | default(false) }}"
     networks: "{{ docker_container_dependencytrack_apiserver_networks }}"
     published_ports: "{{ docker_container_dependencytrack_apiserver_ports | default(omit) }}"
 
@@ -119,26 +119,26 @@
     comparisons: "{{ docker_container_dependencytrack_frontend_comparisons }}"
     image: "{{ docker_container_dependencytrack_frontend_image }}"
     state: "{{ docker_container_dependencytrack_frontend_state | default('started') }}"
-    recreate: "{{ docker_container_dependencytrack_frontend_recreate | default('no') }}"
-    restart: "{{ docker_container_dependencytrack_frontend_restart | default('no') }}"
+    recreate: "{{ docker_container_dependencytrack_frontend_recreate | default(false) }}"
+    restart: "{{ docker_container_dependencytrack_frontend_restart | default(false) }}"
     restart_policy: "{{ docker_container_dependencytrack_frontend_restart_policy | default('always') }}"
     container_default_behavior: no_defaults
-    auto_remove: "{{ docker_container_dependencytrack_frontend_auto_remove | default('no') }}"
-    detach: "{{ docker_container_dependencytrack_frontend_detach | default('yes') }}"
-    init: "{{ docker_container_dependencytrack_frontend_init | default('no') }}"
-    interactive: "{{ docker_container_dependencytrack_frontend_interactive | default('no') }}"
-    keep_volumes: "{{ docker_container_dependencytrack_frontend_keep_volumes | default('yes') }}"
+    auto_remove: "{{ docker_container_dependencytrack_frontend_auto_remove | default(false) }}"
+    detach: "{{ docker_container_dependencytrack_frontend_detach | default(true) }}"
+    init: "{{ docker_container_dependencytrack_frontend_init | default(false) }}"
+    interactive: "{{ docker_container_dependencytrack_frontend_interactive | default(false) }}"
+    keep_volumes: "{{ docker_container_dependencytrack_frontend_keep_volumes | default(true) }}"
     memory: "{{ docker_container_dependencytrack_frontend_memory | default('0') }}"
-    paused: "{{ docker_container_dependencytrack_frontend_paused | default('no') }}"
-    privileged: "{{ docker_container_dependencytrack_frontend_privileged | default('no') }}"
-    read_only: "{{ docker_container_dependencytrack_frontend_read_only | default('no') }}"
-    tty: "{{ docker_container_dependencytrack_frontend_tty | default('no') }}"
+    paused: "{{ docker_container_dependencytrack_frontend_paused | default(false) }}"
+    privileged: "{{ docker_container_dependencytrack_frontend_privileged | default(false) }}"
+    read_only: "{{ docker_container_dependencytrack_frontend_read_only | default(false) }}"
+    tty: "{{ docker_container_dependencytrack_frontend_tty | default(false) }}"
     env_file: "{{ docker_container_dependencytrack_frontend_env_file | default(omit) }}"
     env: "{{ docker_container_dependencytrack_frontend_env | default(omit) }}"
     volumes: "{{ docker_container_dependencytrack_frontend_volumes | default(omit) }}"
     labels: "{{ docker_container_dependencytrack_frontend_labels | default(omit) }}"
-    networks_cli_compatible: "{{ docker_container_dependencytrack_frontend_networks_cli_compatible | default('yes') }}"
+    networks_cli_compatible: "{{ docker_container_dependencytrack_frontend_networks_cli_compatible | default(true) }}"
     network_mode: "{{ docker_network_dependencytrack_frontend_name }}"
-    pull: "{{ docker_container_dependencytrack_frontend_pull | default('no') }}"
+    pull: "{{ docker_container_dependencytrack_frontend_pull | default(false) }}"
     networks: "{{ docker_container_dependencytrack_frontend_networks }}"
     published_ports: "{{ docker_container_dependencytrack_frontend_ports | default(omit) }}"
